White spaces between sections in responsive mode finally corrected

--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,6 @@ body {
   font-size: 16px;
   font-family: 'Yanone Kaffeesatz', sans-serif;
   line-height: 2rem;
-  width: 100vw;
-  /* overflow-x: hidden; */
 }
 
 h1,
@@ -82,7 +80,9 @@ ul {
   height: 5rem;
   background-color: #000000;
   display: flex;
-  position: fixed;
+  position: fixed; /* Conseguir que la barra desaparezca al subir 
+                      Sino, dejar la barra de navegacion como estatica
+                    */
   z-index: 1;
 }
 
@@ -99,9 +99,13 @@ ul {
   display: flex;
 }
 
-.navbar {
-  width: inherit;
-  height: inherit;
+.header .container {
+  height: 5rem;
+}
+
+nav {
+  width: 100%;
+  height: 5rem;
   display: flex;
 }
 
@@ -193,14 +197,13 @@ ul {
 .item {
   margin: 0 auto;
   padding: 0 2rem;
-  display: inherit;
+  display: flex;
   flex-wrap: wrap;
 }
 
 /* Menu section */
 
 .split.left.s1 {
-  border: solid black;
   background-color: #EBE9E6;
   display: inherit;
   align-items: center;
@@ -208,7 +211,6 @@ ul {
 }
 
 .split.right.s1 {
-  border: solid black;
   background-size: cover;
   background-position: center;
   background-image: url(../img/menu.jpg);
@@ -296,7 +298,7 @@ ul {
      
     .split {
       width: 100%;
-      height: 50%;
+      height: 50vh;
     }
 
     .split.right.s1 {
